tests/syntax_errors/test11_2.tl
require "ifj21"
290-3
